# fish-shop-bot

./: .env.example  .gitignore  README.md  add_product_to_cart.py  bot.py  constants.py  fetch_moltin_data.py  get_cart.py  get_cart_items.py  get_products.py  get_token.py  handle_API_requests.py  handle_interfaces.py  pyproject.toml  requirements.txt
