[tool.poetry]
name = "fish_shop_bot"
version = "0.1.0"
description = ""
authors = ["balancy <balancy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
environs = "^9.3.5"
requests = "^2.26.0"
redis = "^4.0.2"
python-telegram-bot = "^13.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.11b1", allow-prereleases = true}
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
